SGD8-2620: Fix overview-title margin and square teaser date overlap

--- a/components/31-molecules/teaser/_teaser.scss
+++ b/components/31-molecules/teaser/_teaser.scss
@@ -205,6 +205,7 @@
       .date {
         display: inline-block;
         margin: -6px 0 0;
+        z-index: 1;
 
         span {
           @include theme('background-color', 'color-none', 'heading-with-light-bg-background-color');
